--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint": "eslint \"./{packages/*/,}{src,__tests__}/**/*.{js,jsx,ts,tsx}\"",
     "lint-fix": "yarn lint --fix",
     "prepack": "rimraf dist && yarn build",
-    "prettier": "prettier --write \"**/{.*/,}*.{css,htm,html,js,json,jsx,md,scss,ts,tsx,vue,yaml,yml}\"",
+    "prettier": "prettier --write \"**/{.*/,}*.{css,htm,html,js,json,jsx,md,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\"",
     "sort-package-json": "sort-package-json",
     "start": "./bin/run",
     "test-release": "dotenv yarn semantic-release -d",
@@ -43,12 +43,12 @@
     "@types/node-fetch": "2.5.3",
     "@typescript-eslint/eslint-plugin": "2.8.0",
     "@typescript-eslint/parser": "2.8.0",
-    "@willbooster/eslint-config-ts": "2.0.0",
-    "@willbooster/prettier-config": "2.0.0",
-    "@willbooster/tsconfig": "2.0.0",
+    "@willbooster/eslint-config-ts": "2.1.0",
+    "@willbooster/prettier-config": "2.1.0",
+    "@willbooster/tsconfig": "2.1.0",
     "dotenv-cli": "3.0.0",
     "eslint": "6.6.0",
-    "eslint-config-prettier": "6.6.0",
+    "eslint-config-prettier": "6.7.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-prettier": "3.1.1",
     "husky": "3.1.0",
