--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@typescript-eslint/parser": "2.9.0",
     "@willbooster/eslint-config-ts": "2.2.0",
     "@willbooster/prettier-config": "2.1.0",
+    "@willbooster/renovate-config": "2.2.0",
     "@willbooster/tsconfig": "2.1.0",
     "dotenv-cli": "3.1.0",
     "eslint": "6.7.1",
