--- a/package.json
+++ b/package.json
@@ -5,22 +5,21 @@
   "description": "A tool for applying WillBooster's conventional configures to npm packages",
   "license": "Apache-2.0",
   "author": "WillBooster Inc.",
+  "bin": {
+    "willboosterify": "./bin/run"
+  },
   "files": [
     "/bin",
     "/dist"
   ],
-  "bin": {
-    "willboosterify": "./bin/run"
-  },
   "scripts": {
     "build": "tsc",
     "cleanup": "yarn format && yarn lint-fix",
-    "format": "yarn sort-package-json && yarn prettier",
+    "format": "sort-package-json && yarn prettier",
     "lint": "eslint \"./{packages/*/,}{src,__tests__}/**/*.{js,jsx,ts,tsx}\"",
     "lint-fix": "yarn lint --fix",
     "prepack": "rimraf dist && yarn build",
     "prettier": "prettier --write \"**/{.*/,}*.{css,htm,html,js,json,jsx,md,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\"",
-    "sort-package-json": "sort-package-json",
     "start": "./bin/run",
     "test-release": "dotenv yarn semantic-release -d",
     "typecheck": "tsc --noEmit"
@@ -42,23 +41,22 @@
     "@types/glob": "7.1.1",
     "@types/js-yaml": "3.12.2",
     "@types/node-fetch": "2.5.4",
-    "@typescript-eslint/eslint-plugin": "2.17.0",
-    "@typescript-eslint/parser": "2.17.0",
+    "@typescript-eslint/eslint-plugin": "2.18.0",
+    "@typescript-eslint/parser": "2.18.0",
     "@willbooster/eslint-config-ts": "2.3.2",
     "@willbooster/prettier-config": "2.3.2",
     "@willbooster/renovate-config": "2.3.2",
-    "@willbooster/tsconfig": "2.3.3",
     "dotenv-cli": "3.1.0",
     "eslint": "6.8.0",
-    "eslint-config-prettier": "6.9.0",
+    "eslint-config-prettier": "6.10.0",
     "eslint-plugin-import": "2.20.0",
     "eslint-plugin-prettier": "3.1.2",
-    "husky": "3.1.0",
-    "lint-staged": "9.5.0",
+    "husky": "4.2.1",
+    "lint-staged": "10.0.4",
     "prettier": "1.19.1",
-    "rimraf": "3.0.0",
-    "semantic-release": "15.14.0",
-    "sort-package-json": "1.39.0",
+    "rimraf": "3.0.1",
+    "semantic-release": "17.0.1",
+    "sort-package-json": "1.39.1",
     "ts-node": "8.6.2",
     "typescript": "3.7.5"
   },
