--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,18 @@
 {
-  "extends": "./node_modules/@willbooster/tsconfig/tsconfig.json",
-  "compilerOptions": { "typeRoots": ["./node_modules/@types", "./@types"], "module": "commonjs", "outDir": "dist" },
+  "compilerOptions": {
+    "target": "es2018",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "alwaysStrict": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "sourceMap": true,
+    "importHelpers": true,
+    "outDir": "dist",
+    "typeRoots": ["./node_modules/@types", "./@types"]
+  },
   "include": ["src/**/*", "__tests__/**/*", "packages/*/src/**/*", "packages/*/__tests__/**/*"]
 }
