fix: force to remove tslib

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "sourceMap": true,
-    "importHelpers": true,
+    "importHelpers": false,
     "outDir": "dist",
     "typeRoots": ["./node_modules/@types", "./@types"]
   },
