--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "fs-extra": "8.1.0",
     "glob": "7.1.6",
     "js-yaml": "3.13.1",
-    "node-fetch": "2.6.0",
-    "tslib": "1.10.0"
+    "node-fetch": "2.6.0"
   },
   "devDependencies": {
     "@types/fs-extra": "8.0.1",
