--- a/package.json
+++ b/package.json
@@ -5,13 +5,6 @@
   "description": "A tool for applying WillBooster's conventional configures to npm packages",
   "license": "Apache-2.0",
   "author": "WillBooster Inc.",
-  "bin": {
-    "willboosterify": "./bin/run"
-  },
-  "files": [
-    "/bin",
-    "/dist"
-  ],
   "scripts": {
     "build": "tsc",
     "cleanup": "yarn format && yarn lint-fix",
@@ -20,26 +13,25 @@
     "lint-fix": "yarn lint --fix",
     "prepack": "rimraf dist && yarn build",
     "prettier": "prettier --write \"**/{.*/,}*.{css,htm,html,js,json,jsx,md,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\" --color",
-    "start": "./bin/run",
+    "start": "yarn ts-node src",
     "test-release": "dotenv yarn semantic-release -d",
     "typecheck": "tsc --noEmit --Pretty"
   },
   "prettier": "@willbooster/prettier-config",
   "dependencies": {
-    "@oclif/command": "1.8.0",
-    "@oclif/config": "1.17.0",
-    "@oclif/plugin-help": "3.2.0",
     "deepmerge": "4.2.2",
     "fs-extra": "9.0.1",
     "glob": "7.1.6",
     "js-yaml": "3.14.0",
-    "node-fetch": "2.6.1"
+    "node-fetch": "2.6.1",
+    "yargs": "^16.1.0"
   },
   "devDependencies": {
     "@types/fs-extra": "9.0.2",
     "@types/glob": "7.1.3",
     "@types/js-yaml": "3.12.5",
     "@types/node-fetch": "2.5.7",
+    "@types/yargs": "^15.0.9",
     "@typescript-eslint/eslint-plugin": "4.6.0",
     "@typescript-eslint/parser": "4.6.0",
     "@willbooster/eslint-config-ts": "5.0.0",
@@ -60,8 +52,5 @@
   },
   "engines": {
     "node": ">=8.0.0"
-  },
-  "oclif": {
-    "bin": "willboosterify"
   }
 }
