--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "lint-fix": "yarn lint --fix",
     "prepack": "rimraf dist && yarn build",
     "prettier": "prettier --write \"**/{.*/,}*.{css,htm,html,js,json,jsx,md,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\" --color",
-    "start": "npm run ts-node src",
+    "start": "babel-node -x .ts -i /node_modules/ src",
     "test-release": "dotenv yarn semantic-release -d",
-    "ts-node": "ts-node",
     "typecheck": "tsc --noEmit --Pretty"
   },
   "prettier": "@willbooster/prettier-config",
   "dependencies": {
+    "core-js": "^3.9.0",
     "deepmerge": "4.2.2",
     "fs-extra": "9.0.1",
     "glob": "7.1.6",
@@ -28,6 +28,12 @@
     "yargs": "16.2.0"
   },
   "devDependencies": {
+    "@babel/core": "7.13.1",
+    "@babel/node": "7.13.0",
+    "@babel/plugin-proposal-class-properties": "7.13.0",
+    "@babel/plugin-proposal-numeric-separator": "7.12.13",
+    "@babel/preset-env": "7.13.5",
+    "@babel/preset-typescript": "7.13.0",
     "@types/fs-extra": "9.0.2",
     "@types/glob": "7.1.3",
     "@types/js-yaml": "3.12.5",
@@ -38,6 +44,7 @@
     "@willbooster/eslint-config-ts": "5.0.0",
     "@willbooster/prettier-config": "5.0.0",
     "@willbooster/renovate-config": "5.0.0",
+    "babel-plugin-transform-remove-console": "6.9.4",
     "dotenv-cli": "4.0.0",
     "eslint": "7.12.1",
     "eslint-config-prettier": "7.0.0",
