--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
   "name": "willboosterify",
   "version": "0.0.0-development",
-  "private": false,
   "description": "A tool for applying WillBooster's conventional configures to npm packages",
   "license": "Apache-2.0",
   "author": "WillBooster Inc.",
   "scripts": {
     "build": "tsc",
     "cleanup": "yarn format && yarn lint-fix",
-    "format": "sort-package-json && yarn prettier",
-    "lint": "eslint \"./{src,__tests__}/**/*.{js,jsx,ts,tsx}\" --color",
+    "format": "sort-package-json && yarn prettify",
+    "lint": "eslint --color \"./{src,__tests__}/**/*.{js,jsx,ts,tsx}\"",
     "lint-fix": "yarn lint --fix",
     "prepack": "rimraf dist && yarn build",
-    "prettier": "prettier --write \"**/{.*/,}*.{css,htm,html,js,json,jsx,md,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\" --color",
     "start": "babel-node -x .ts -i /node_modules/ src",
     "test-release": "dotenv yarn semantic-release -d",
-    "typecheck": "tsc --noEmit --Pretty"
+    "typecheck": "tsc --noEmit --Pretty",
+    "prettify": "prettier --color --write \"**/{.*/,}*.{css,htm,html,js,json,json5,jsx,md,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\""
   },
   "prettier": "@willbooster/prettier-config",
   "dependencies": {
@@ -34,24 +33,28 @@
     "@babel/plugin-proposal-numeric-separator": "7.12.13",
     "@babel/preset-env": "7.14.1",
     "@babel/preset-typescript": "7.13.0",
+    "@types/eslint": "7",
     "@types/fs-extra": "9.0.11",
     "@types/glob": "7.1.3",
     "@types/js-yaml": "4.0.1",
+    "@types/micromatch": "4",
     "@types/node-fetch": "2.5.10",
     "@types/yargs": "16.0.1",
-    "@typescript-eslint/eslint-plugin": "4.22.1",
-    "@typescript-eslint/parser": "4.22.1",
+    "@typescript-eslint/eslint-plugin": "4.23.0",
+    "@typescript-eslint/parser": "4.23.0",
     "@willbooster/eslint-config-ts": "6.3.0",
     "@willbooster/prettier-config": "6.2.1",
     "@willbooster/renovate-config": "6.3.0",
     "babel-plugin-transform-remove-console": "6.9.4",
     "dotenv-cli": "4.0.0",
-    "eslint": "7.25.0",
+    "eslint": "7.26.0",
     "eslint-config-prettier": "8.3.0",
+    "eslint-import-resolver-node": "0.3.4",
     "eslint-plugin-import": "2.22.1",
     "husky": "4.3.8",
-    "lint-staged": "10.5.4",
-    "prettier": "2.2.1",
+    "lint-staged": "11.0.0",
+    "micromatch": "4.0.4",
+    "prettier": "2.3.0",
     "rimraf": "3.0.2",
     "semantic-release": "17.4.2",
     "sort-package-json": "1.50.0",
