--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,7 @@
     "resolveJsonModule": true,
     "sourceMap": true,
     "importHelpers": false,
-    "outDir": "dist",
-    "typeRoots": ["./node_modules/@types", "./@types"]
+    "outDir": "dist"
   },
-  "include": ["src/**/*", "__tests__/**/*", "packages/*/src/**/*", "packages/*/__tests__/**/*"]
+  "include": ["src/**/*", "__tests__/**/*", "./node_modules/@types", "./@types"]
 }
