--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "deepmerge": "4.2.2",
     "glob": "7.1.7",
     "js-yaml": "4.1.0",
+    "lodash.clonedeep": "4.5.0",
     "node-fetch": "2.6.1",
     "yargs": "17.0.1"
   },
@@ -38,6 +39,7 @@
     "@types/eslint": "7",
     "@types/glob": "7.1.3",
     "@types/js-yaml": "4.0.1",
+    "@types/lodash.clonedeep": "4.5.6",
     "@types/micromatch": "4",
     "@types/node-fetch": "2.5.10",
     "@types/yargs": "16.0.1",
