--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/js-yaml": "4.0.3",
     "@types/lodash.clonedeep": "4.5.6",
     "@types/micromatch": "4.0.2",
+    "@types/node": "16.7.10",
     "@types/node-fetch": "2.5.12",
     "@types/yargs": "17.0.2",
     "@typescript-eslint/eslint-plugin": "4.30.0",
