--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "build": "tsc",
     "cleanup": "yarn format && yarn lint-fix",
     "format": "sort-package-json && yarn prettify",
+    "postinstall": "husky install",
     "lint": "eslint --color \"./{src,__tests__}/**/*.{js,jsx,ts,tsx}\"",
     "lint-fix": "yarn lint --fix",
     "prepack": "rimraf dist && yarn build",
+    "prepublishOnly": "pinst --disable",
+    "prettify": "prettier --color --write \"**/{.*/,}*.{css,htm,html,js,json,json5,jsx,md,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\"",
+    "postpublish": "pinst --enable",
     "start": "babel-node -x .ts -i /node_modules/ src",
     "test": "jest",
     "test-release": "dotenv yarn semantic-release -d",
-    "typecheck": "tsc --noEmit --Pretty",
-    "prettify": "prettier --color --write \"**/{.*/,}*.{css,htm,html,js,json,json5,jsx,md,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\"",
-    "postinstall": "husky install",
-    "prepublishOnly": "pinst --disable",
-    "postpublish": "pinst --enable"
+    "typecheck": "tsc --noEmit --Pretty"
   },
   "prettier": "@willbooster/prettier-config",
   "dependencies": {
@@ -44,7 +44,7 @@
     "@types/lodash.clonedeep": "4.5.6",
     "@types/micromatch": "4.0.2",
     "@types/node": "16.11.6",
-    "@types/node-fetch": "3.0.2",
+    "@types/node-fetch": "3.0.3",
     "@types/yargs": "17.0.5",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
