--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "willboosterify",
+  "name": "wbfy",
   "version": "0.0.0-development",
   "description": "A tool for applying WillBooster's conventional configures to npm packages",
   "license": "Apache-2.0",
