--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "Apache-2.0",
   "author": "WillBooster Inc.",
   "scripts": {
-    "build": "tsc",
+    "build": "node esbuild.js",
     "cleanup": "yarn format && yarn lint-fix",
     "format": "sort-package-json && yarn prettify",
     "postinstall": "husky install",
@@ -15,14 +15,12 @@
     "prepublishOnly": "pinst --disable",
     "prettify": "prettier --color --write \"**/{.*/,}*.{cjs,css,htm,html,js,json,json5,jsx,md,mjs,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\"",
     "postpublish": "pinst --enable",
-    "start": "babel-node -x .ts -i /node_modules/ src",
-    "test": "jest",
-    "test-release": "dotenv yarn semantic-release -d",
+    "start": "node -r esbuild-register src",
+    "test": "dotenv -- yarn jest --color __tests__",
     "typecheck": "tsc --noEmit --Pretty"
   },
   "prettier": "@willbooster/prettier-config",
   "dependencies": {
-    "core-js": "3.20.2",
     "deepmerge": "4.2.2",
     "glob": "7.2.0",
     "js-yaml": "4.1.0",
@@ -31,12 +29,6 @@
     "yargs": "17.3.1"
   },
   "devDependencies": {
-    "@babel/core": "7.16.7",
-    "@babel/node": "7.16.7",
-    "@babel/plugin-proposal-class-properties": "7.16.7",
-    "@babel/plugin-proposal-numeric-separator": "7.16.7",
-    "@babel/preset-env": "7.16.7",
-    "@babel/preset-typescript": "7.16.7",
     "@types/eslint": "8.2.2",
     "@types/glob": "7.2.0",
     "@types/jest": "27.4.0",
@@ -51,9 +43,11 @@
     "@willbooster/eslint-config-ts": "6.5.0",
     "@willbooster/prettier-config": "6.5.0",
     "@willbooster/renovate-config": "6.5.0",
-    "babel-jest": "27.4.6",
-    "babel-plugin-transform-remove-console": "6.9.4",
+    "conventional-changelog-conventionalcommits": "4.6.3",
+    "core-js": "3.20.2",
     "dotenv-cli": "4.1.1",
+    "esbuild": "0.14.12",
+    "esbuild-register": "3.3.2",
     "eslint": "8.6.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-import-resolver-node": "0.3.6",
@@ -71,7 +65,7 @@
     "typescript": "4.5.4"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=16.0.0"
   },
   "packageManager": "yarn@3.2.0-rc.10"
 }
