--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,7 @@
 defaultSemverRangePrefix: ''
 
+nmMode: hardlinks-global
+
 nodeLinker: node-modules
 
 plugins:
@@ -8,4 +10,4 @@ plugins:
   - path: .yarn/plugins/plugin-auto-install.cjs
     spec: 'https://github.com/WillBooster/yarn-plugin-auto-install/releases/download/v1.8.0/index.cjs'
 
-yarnPath: .yarn/releases/yarn-3.2.0-rc.10.cjs
+yarnPath: .yarn/releases/yarn-3.2.0-rc.11.cjs
