--- a/package.json
+++ b/package.json
@@ -43,34 +43,36 @@
     "@types/node": "16.11.19",
     "@types/node-fetch": "3.0.3",
     "@types/yargs": "17.0.8",
-    "@typescript-eslint/eslint-plugin": "5.9.0",
-    "@typescript-eslint/parser": "5.9.0",
-    "@willbooster/eslint-config-ts": "6.5.0",
-    "@willbooster/prettier-config": "6.5.0",
-    "@willbooster/renovate-config": "6.5.0",
+    "@typescript-eslint/eslint-plugin": "5.10.0",
+    "@typescript-eslint/parser": "5.10.0",
+    "@willbooster/eslint-config-ts": "9.0.0",
+    "@willbooster/prettier-config": "9.0.0",
+    "@willbooster/renovate-config": "9.1.0",
     "conventional-changelog-conventionalcommits": "4.6.3",
     "core-js": "3.20.2",
     "dotenv-cli": "4.1.1",
     "esbuild": "0.14.12",
     "esbuild-register": "3.3.2",
-    "eslint": "8.6.0",
+    "eslint": "8.7.0",
     "eslint-config-prettier": "8.3.0",
-    "eslint-import-resolver-node": "0.3.6",
+    "eslint-import-resolver-typescript": "2.5.0",
     "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-sort-class-members": "1.14.1",
+    "eslint-plugin-sort-destructure-keys": "1.4.0",
     "husky": "7.0.4",
     "jest": "27.4.7",
-    "lint-staged": "12.1.7",
+    "lint-staged": "12.2.2",
     "micromatch": "4.0.4",
-    "pinst": "2.1.6",
+    "pinst": "^2.0.0",
     "prettier": "2.5.1",
     "rimraf": "3.0.2",
     "semantic-release": "18.0.1",
     "sort-package-json": "1.53.1",
     "ts-node": "10.4.0",
-    "typescript": "4.5.4"
+    "typescript": "4.5.5"
   },
   "engines": {
     "node": ">=16.0.0"
   },
-  "packageManager": "yarn@3.2.0-rc.10"
+  "packageManager": "yarn@3.2.0-rc.11"
 }
