--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "prettify": "prettier --color --write \"**/{.*/,}*.{cjs,css,htm,html,js,json,json5,jsx,md,mjs,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\"",
     "postpublish": "pinst --enable",
     "start": "node -r esbuild-register src",
-    "test": "dotenv -- yarn jest --color __tests__",
+    "test": "yarn jest --color __tests__",
     "typecheck": "tsc --noEmit --Pretty"
   },
   "prettier": "@willbooster/prettier-config",
@@ -50,7 +50,6 @@
     "@willbooster/renovate-config": "9.1.0",
     "conventional-changelog-conventionalcommits": "4.6.3",
     "core-js": "3.20.2",
-    "dotenv-cli": "4.1.1",
     "esbuild": "0.14.12",
     "esbuild-register": "3.3.2",
     "eslint": "8.7.0",
@@ -65,7 +64,6 @@
     "micromatch": "4.0.4",
     "pinst": "^2.0.0",
     "prettier": "2.5.1",
-    "rimraf": "3.0.2",
     "semantic-release": "18.0.1",
     "sort-package-json": "1.53.1",
     "ts-node": "10.4.0",
