--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "@types/node": "16.11.19",
     "@types/node-fetch": "3.0.3",
     "@types/yargs": "17.0.8",
-    "@typescript-eslint/eslint-plugin": "5.10.0",
-    "@typescript-eslint/parser": "5.10.0",
+    "@typescript-eslint/eslint-plugin": "5.10.2",
+    "@typescript-eslint/parser": "5.10.2",
     "@willbooster/eslint-config-ts": "9.0.0",
     "@willbooster/prettier-config": "9.0.0",
     "@willbooster/renovate-config": "9.1.0",
@@ -52,7 +52,7 @@
     "core-js": "3.20.2",
     "esbuild": "0.14.12",
     "esbuild-register": "3.3.2",
-    "eslint": "8.7.0",
+    "eslint": "8.8.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-import-resolver-typescript": "2.5.0",
     "eslint-plugin-import": "2.25.4",
@@ -60,17 +60,17 @@
     "eslint-plugin-sort-destructure-keys": "1.4.0",
     "husky": "7.0.4",
     "jest": "27.4.7",
-    "lint-staged": "12.2.2",
+    "lint-staged": "12.3.3",
     "micromatch": "4.0.4",
-    "pinst": "^2.0.0",
+    "pinst": "2.1.6",
     "prettier": "2.5.1",
     "semantic-release": "18.0.1",
-    "sort-package-json": "1.53.1",
+    "sort-package-json": "1.54.0",
     "ts-node": "10.4.0",
     "typescript": "4.5.5"
   },
   "engines": {
     "node": ">=14.0.0"
   },
-  "packageManager": "yarn@3.2.0-rc.11"
+  "packageManager": "yarn@3.2.0-rc.13"
 }
