--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,16 +1,11 @@
-name: Test
+name: Release
 on:
-  pull_request:
-    branches:
-      - main
-      - '!renovate/**'
   push:
     branches:
       - main
-      - renovate/**
 jobs:
-  test:
-    uses: WillBooster/reusable-workflows/.github/workflows/test.yml@main
+  release:
+    uses: WillBooster/reusable-workflows/.github/workflows/release.yml@main
     with:
       non_self_hosted: true
     secrets:
