--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,8 +1,9 @@
 {
-  "branch": "release",
+  "branches": ["main"],
   "plugins": [
-    "@semantic-release/commit-analyzer",
+    ["@semantic-release/commit-analyzer", { "preset": "conventionalcommits" }],
     "@semantic-release/release-notes-generator",
+    "@semantic-release/npm",
     "@semantic-release/github"
   ]
 }
