--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "willboosterify",
-  "version": "0.0.0-development",
+  "name": "wbfy",
+  "version": "0.0.0-semantically-released",
   "description": "A tool for applying WillBooster's conventional configures to npm packages",
   "license": "Apache-2.0",
   "author": "WillBooster Inc.",
+  "bin": "./bin/index.cjs",
+  "files": [
+    "bin/",
+    "dist/"
+  ],
   "scripts": {
-    "build": "tsc",
+    "build": "node esbuild.js",
     "cleanup": "yarn format && yarn lint-fix",
     "format": "sort-package-json && yarn prettify",
     "postinstall": "husky install",
@@ -15,14 +20,13 @@
     "prepublishOnly": "pinst --disable",
     "prettify": "prettier --color --write \"**/{.*/,}*.{cjs,css,htm,html,js,json,json5,jsx,md,mjs,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\"",
     "postpublish": "pinst --enable",
-    "start": "babel-node -x .ts -i /node_modules/ src",
-    "test": "jest",
-    "test-release": "dotenv yarn semantic-release -d",
+    "setup-ci": "cd .. && pwd && rm -Rf test-fixtures-for-wbfy && git clone https://github.com/WillBooster/test-fixtures-for-wbfy.git",
+    "start": "node -r esbuild-register src",
+    "test": "yarn jest --color __tests__",
     "typecheck": "tsc --noEmit --Pretty"
   },
   "prettier": "@willbooster/prettier-config",
   "dependencies": {
-    "core-js": "3.20.3",
     "deepmerge": "4.2.2",
     "glob": "7.2.0",
     "js-yaml": "4.1.0",
@@ -31,13 +35,7 @@
     "yargs": "17.3.1"
   },
   "devDependencies": {
-    "@babel/core": "7.16.10",
-    "@babel/node": "7.16.8",
-    "@babel/plugin-proposal-class-properties": "7.16.7",
-    "@babel/plugin-proposal-numeric-separator": "7.16.7",
-    "@babel/preset-env": "7.16.11",
-    "@babel/preset-typescript": "7.16.7",
-    "@types/eslint": "8.4.0",
+    "@types/eslint": "8.2.2",
     "@types/glob": "7.2.0",
     "@types/jest": "27.4.0",
     "@types/js-yaml": "4.0.5",
@@ -46,32 +44,32 @@
     "@types/node": "16.11.21",
     "@types/node-fetch": "3.0.3",
     "@types/yargs": "17.0.8",
-    "@typescript-eslint/eslint-plugin": "5.10.0",
-    "@typescript-eslint/parser": "5.10.0",
-    "@willbooster/eslint-config-ts": "6.5.0",
-    "@willbooster/prettier-config": "6.5.0",
-    "@willbooster/renovate-config": "6.5.0",
-    "babel-jest": "27.4.6",
-    "babel-plugin-transform-remove-console": "6.9.4",
-    "dotenv-cli": "4.1.1",
-    "eslint": "8.7.0",
+    "@typescript-eslint/eslint-plugin": "5.10.2",
+    "@typescript-eslint/parser": "5.10.2",
+    "@willbooster/eslint-config-ts": "9.0.0",
+    "@willbooster/prettier-config": "9.0.0",
+    "@willbooster/renovate-config": "9.1.0",
+    "conventional-changelog-conventionalcommits": "4.6.3",
+    "esbuild": "0.14.12",
+    "esbuild-register": "3.3.2",
+    "eslint": "8.8.0",
     "eslint-config-prettier": "8.3.0",
-    "eslint-import-resolver-node": "0.3.6",
+    "eslint-import-resolver-typescript": "2.5.0",
     "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-sort-class-members": "1.14.1",
+    "eslint-plugin-sort-destructure-keys": "1.4.0",
     "husky": "7.0.4",
     "jest": "27.4.7",
-    "lint-staged": "12.2.2",
+    "lint-staged": "12.3.3",
     "micromatch": "4.0.4",
     "pinst": "2.1.6",
     "prettier": "2.5.1",
-    "rimraf": "3.0.2",
     "semantic-release": "18.0.1",
-    "sort-package-json": "1.53.1",
-    "ts-node": "10.4.0",
+    "sort-package-json": "1.54.0",
     "typescript": "4.5.5"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=14.0.0"
   },
-  "packageManager": "yarn@3.2.0-rc.11"
+  "packageManager": "yarn@3.2.0-rc.13"
 }
