--- a/.github/workflows/wbfy.yml
+++ b/.github/workflows/wbfy.yml
@@ -8,3 +8,5 @@ jobs:
     uses: WillBooster/reusable-workflows/.github/workflows/wbfy.yml@main
     with:
       non_self_hosted: true
+    secrets:
+      GH_TOKEN: ${{ secrets.PUBLIC_GH_BOT_PAT }}
