chore: use debug-wbfy.yml

--- a/.github/workflows/wbfy.yml
+++ b/.github/workflows/wbfy.yml
@@ -5,6 +5,8 @@ on:
   workflow_dispatch:
 jobs:
   wbfy:
-    uses: WillBooster/reusable-workflows/.github/workflows/wbfy.yml@main
+    uses: WillBooster/reusable-workflows/.github/workflows/debug-wbfy.yml@main
     with:
       non_self_hosted: true
+    secrets:
+      GH_TOKEN: ${{ secrets.PUBLIC_GH_BOT_PAT }}
