--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "js-yaml": "4.1.0",
     "lodash.clonedeep": "4.5.0",
     "node-fetch": "3.2.0",
+    "simple-git": "3.2.6",
     "yargs": "17.3.1"
   },
   "devDependencies": {
@@ -72,7 +73,7 @@
     "typescript": "4.5.5"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=16.6.0"
   },
   "packageManager": "yarn@3.2.0-rc.15"
 }
