--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "glob": "7.2.0",
     "js-yaml": "4.1.0",
     "lodash.clonedeep": "4.5.0",
+    "minimal-promise-pool": "1.1.4",
     "node-fetch": "3.2.0",
     "simple-git": "3.2.6",
     "yargs": "17.3.1"
