--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "postpack": "pinst --enable",
     "prettify": "prettier --color --write \"**/{.*/,}*.{cjs,css,htm,html,js,json,json5,jsx,md,mjs,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\"",
     "release": "yarn build && semantic-release",
-    "setup-ci": "cd .. && pwd && rm -Rf test-fixtures-for-wbfy && git clone https://github.com/WillBooster/test-fixtures-for-wbfy.git",
     "start": "node -r esbuild-register src",
     "test": "yarn jest --color __tests__",
+    "test/ci-setup": "cd .. && pwd && rm -Rf test-fixtures-for-wbfy && git clone https://github.com/WillBooster/test-fixtures-for-wbfy.git",
     "typecheck": "tsc --noEmit --Pretty"
   },
   "prettier": "@willbooster/prettier-config",
@@ -74,8 +74,8 @@
     "sort-package-json": "1.55.0",
     "typescript": "4.6.3"
   },
+  "packageManager": "yarn@3.2.0",
   "engines": {
     "node": ">=16.6.0"
-  },
-  "packageManager": "yarn@3.2.0"
+  }
 }
