--- a/.github/workflows/semantic-pr.yml
+++ b/.github/workflows/semantic-pr.yml
@@ -8,3 +8,5 @@ on:
 jobs:
   semantic-pr:
     uses: WillBooster/reusable-workflows/.github/workflows/semantic-pr.yml@main
+    with:
+      github_hosted_runner: true
