--- a/.github/workflows/wbfy-merge.yml
+++ b/.github/workflows/wbfy-merge.yml
@@ -8,3 +8,5 @@ jobs:
     uses: WillBooster/reusable-workflows/.github/workflows/wbfy-merge.yml@main
     secrets:
       GH_TOKEN: ${{ secrets.PUBLIC_GH_BOT_PAT }}
+    with:
+      github_hosted_runner: true
