--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,14 @@
     "alwaysStrict": true,
     "esModuleInterop": true,
     "importHelpers": false,
-    "module": "commonjs",
+    "module": "esnext",
     "moduleResolution": "node",
     "outDir": "dist",
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "target": "es2019"
+    "target": "esnext"
   },
   "include": ["src/**/*", "__tests__/**/*", "scripts/**/*", "./node_modules/@types", "./@types"]
 }
