fix: support 'wb test' and 'wb typecheck'

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "postpack": "pinst --enable",
     "prettify": "prettier --cache --color --write \"**/{.*/,}*.{cjs,css,cts,htm,html,js,json,json5,jsx,md,mjs,mts,scss,ts,tsx,vue,yaml,yml}\" \"!**/test-fixtures/**\"",
     "release": "yarn build && semantic-release",
-    "start": "dotenv -- build-ts run src/index.ts --",
+    "start": "build-ts run src/index.ts --env .env --",
     "start-prod": "yarn build && yarn wbfy",
     "test": "vitest tests",
     "test/ci-setup": "cd .. && pwd && rm -Rf test-fixtures-for-wbfy && git clone https://github.com/WillBooster/test-fixtures-for-wbfy.git",
@@ -34,7 +34,6 @@
     "@willbooster/shared-lib": "3.4.2",
     "deepmerge": "4.3.1",
     "dotenv": "16.3.1",
-    "dotenv-cli": "7.2.1",
     "globby": "13.2.2",
     "js-yaml": "4.1.0",
     "libsodium-wrappers": "0.7.11",
