feat: migrate from bun.lockb to bun.lock

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
 * text=auto
 
-*.lockb binary diff=lockb
+bun.lock linguist-language=json
+bun.lockb binary diff=lockb
+
 *.vcproj text eol=crlf
 
 *.cjs text eol=lf
