--- a/.github/workflows/gen-pr-codex.yml
+++ b/.github/workflows/gen-pr-codex.yml
@@ -14,5 +14,5 @@ jobs:
       coding-tool: codex-cli
       issue-number: ${{ github.event.issue.number || github.event.number }}
     secrets:
-      CODEX_CLI_OAUTH_TOKEN: ${{ secrets.CODEX_CLI_OAUTH_TOKEN }}
       GH_TOKEN: ${{ secrets.PUBLIC_GH_BOT_PAT }}
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
