--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
     "check-for-ai": "yarn install > /dev/null && yarn format > /dev/null 2> /dev/null || true && yarn lint-fix --quiet && yarn typecheck",
     "cleanup": "yarn format && yarn lint-fix",
     "format": "sort-package-json && yarn prettify",
-    "postinstall": "husky || true",
+    "postinstall": "husky install",
     "lint": "eslint --color",
     "lint-fix": "yarn lint --fix",
     "prepack": "pinst --disable",
     "postpack": "pinst --enable",
-    "prepare": "husky || true",
     "prettify": "prettier --cache --color --write \"**/{.*/,}*.{cjs,css,cts,htm,html,java,js,json,json5,jsonc,jsx,md,mjs,mts,scss,ts,tsx,vue,yaml,yml}\" \"!**/test{-,/}fixtures/**\" || true",
     "release": "yarn build && semantic-release",
     "start": "build-ts run src/index.ts --env .env --",
@@ -72,11 +71,11 @@
     "eslint-plugin-unicorn": "60.0.0",
     "eslint-plugin-unused-imports": "4.2.0",
     "globals": "16.3.0",
-    "husky": "9.1.7",
+    "husky": "^8.0.0",
     "jest": "30.0.5",
     "lint-staged": "16.1.5",
     "micromatch": "4.0.8",
-    "pinst": "3.0.0",
+    "pinst": "^3.0.0",
     "prettier": "3.6.2",
     "prettier-plugin-java": "2.7.4",
     "semantic-release": "24.2.7",
@@ -87,7 +86,7 @@
     "typescript-eslint": "8.40.0",
     "vitest": "3.2.4"
   },
-  "packageManager": "yarn@4.9.3",
+  "packageManager": "yarn@4.9.4",
   "engines": {
     "node": ">=20"
   },
