--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "minimal-promise-pool": "5.0.0",
     "simple-git": "3.28.0",
     "yargs": "18.0.0",
-    "zod": "4.0.17"
+    "zod": "4.1.5"
   },
   "devDependencies": {
     "@types/eslint": "9.6.1",
@@ -59,9 +59,9 @@
     "@willbooster/eslint-config-ts": "11.4.5",
     "@willbooster/prettier-config": "10.2.0",
     "@yarnpkg/core": "4.4.3",
-    "build-ts": "15.0.21",
+    "build-ts": "15.1.0",
     "conventional-changelog-conventionalcommits": "9.1.0",
-    "eslint": "9.33.0",
+    "eslint": "9.34.0",
     "eslint-config-flat-gitignore": "2.1.0",
     "eslint-config-prettier": "10.1.8",
     "eslint-import-resolver-typescript": "4.4.4",
@@ -71,11 +71,11 @@
     "eslint-plugin-unicorn": "60.0.0",
     "eslint-plugin-unused-imports": "4.2.0",
     "globals": "16.3.0",
-    "husky": "^8.0.0",
-    "jest": "30.0.5",
+    "husky": "9.1.7",
+    "jest": "30.1.1",
     "lint-staged": "16.1.5",
     "micromatch": "4.0.8",
-    "pinst": "^3.0.0",
+    "pinst": "3.0.0",
     "prettier": "3.6.2",
     "prettier-plugin-java": "2.7.4",
     "semantic-release": "24.2.7",
@@ -83,7 +83,7 @@
     "ts-node": "10.9.2",
     "type-fest": "4.41.0",
     "typescript": "5.9.2",
-    "typescript-eslint": "8.40.0",
+    "typescript-eslint": "8.41.0",
     "vitest": "3.2.4"
   },
   "packageManager": "yarn@4.9.4",
