ci: fix autofix.yml

--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -22,5 +22,5 @@ jobs:
           check-latest: true
       - run: yarn install
       - run: yarn cleanup
-      - run: yarn run build
+      - run: yarn build
       - uses: autofix-ci/action@v1
