fix: fix tsc settings

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "start-prod": "yarn build && yarn wbfy",
     "test": "vitest test",
     "test/ci-setup": "cd .. && pwd && rm -Rf test-fixtures-for-wbfy && git clone https://github.com/WillBooster/test-fixtures-for-wbfy.git",
-    "typecheck": "tsc --noEmit --Pretty"
+    "typecheck": "tsc --noEmit"
   },
   "prettier": "@willbooster/prettier-config",
   "dependencies": {
